# uvc-gadget

./: README.md  meson.build
include/uvcgadget/: meson.build
lib/: configfs.c  jpg-source.c  libcamera-source.cpp  meson.build  stream.c  test-source.c  uvc.c  v4l2.c
python/: check-ioctls.py  check-uvc-ioctls.py  corrected-uvc.py  debug-uvc.py  fixed-uvc-flags.py  fixed-uvc-poll.py  python-uvc-2.py  python-uvc-3.py  python-uvc-4.py  python-uvc-5.py  python-uvc-6.py  python-uvc-7.py  python-uvc-8.py  python-uvc-complete.py  python-uvc-simplfied-v2.py  python-uvc-simplfied-v3.py  python-uvc-simplified.py  python-uvc.py  uvc-fixed.py  v4l2-debug.py
scripts/: uvc-windows.sh
src/: main.c
